# RPGMaker-PSVita

./: .gitignore  CMakeLists.txt  Makefile  Makefile.gfx  Makefile.minimal  README  final.c  final.elf  final.velf  final.vpk  main.c  minimal.c  param.sfo  readme.md  virtual_buttons.h  virtual_buttons_simple.c  vita2d_test.c
src/: gfx.c  simple.c  virtual_buttons.c
